# dml-mp3tagger

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  dml-mp3tagger.tmpl  pyproject.toml
src/mp3tagger/: _util.py  config.py  id3handler.py  tagger.py
src/mp3tagger/data/: mp3tagger.ini
tests/: test_config.py  test_id3handler.py  test_mydata.py  test_tagger.py
tests/testresources/: mp3tagger.ini
