[tool.poetry]
name = "dml-mp3tagger"
version = "2024.8.1017"		# Published version is managed BY bumper
description = "Change mp3 tags to what I want"
authors = ["Dave Lane <cheery.koala5370@fastmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dmlane/dml-mp3tagger"
include = [
   { path = 'LICENSE', format = 'sdist' },
   { path = 'README.md', format = 'sdist' },
   { path = 'docs', format = 'sdist' },
   { path = 'tests', format = 'sdist' },
]
packages = [
   { include = "mp3tagger", from = "src" },
]

[tool.homebrew]
# Set to false to skip building HomeBrew package
build = true

[tool.poetry.dependencies]
python = ">=3.12,<4"
appdirs = "^1.4.4"
mutagen = "^1.47.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-autobuild = ">=2021.0"
sphinx-rtd-theme = ">=1.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
bumpver = ">=2022.1120"
isort = ">=5.12.0"
mypy = ">=1.2.0"
pre-commit = "^3.5.0"
pylint = ">=2.17.2"
pypi-simple = "^1.4.0"
pytest = ">=7.3.1"
pytest-resource-path = "^1.3.0"
setuptools = ">=68.2.2"
mock = "^5.1.0"

[tool.poetry.scripts]
# Section managed with vi
mp3tagger = "mp3tagger.tagger:main"

[[tool.poetry.source]]
name = "repositories.fury"
url = "https://pypi.fury.io/dave-lane/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "2024.8.1017"
version_pattern = "YYYY.MM.BUILD[-PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]

[tool.black]
line_length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = "src/mp3tagger"
